--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,11 @@ kiwisolver==1.4.7
 matplotlib==3.9.2
 mediapipe==0.10.14
 ml_dtypes==0.5.0
-numpy
+numpy==1.23.5
 opencv-contrib-python==4.10.0.84
 opencv-python==4.10.0.84
 opencv-python-headless==4.10.0.84
+opencv-python==4.10.0.84
 opt_einsum==3.4.0
 packaging==24.1
 pandas==2.2.3
@@ -28,3 +29,4 @@ scipy==1.14.1
 six==1.16.0
 sounddevice==0.5.0
 tzdata==2024.2
+skin-tone-classifier==1.2.4
