--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,9 @@ mediapipe==0.10.14
 ml_dtypes==0.5.0
 numpy==2.1.3
 opencv-contrib-python==4.10.0.84
-opencv-python==4.10.0.84
 opencv-python-headless==4.10.0.84
-opencv-python==4.10.0.84
+# opencv-python==4.10.0.84
+opencv-python-headless
 opt_einsum==3.4.0
 packaging==24.1
 pandas==2.2.3
